--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/BG3/Maps/GameMap.GameMap
+EditorStartupMap=/Game/BG3/Maps/GameMap.GameMap
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
