--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -24,6 +24,7 @@ r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 r.DefaultFeature.LocalExposure.HighlightContrastScale=0.8
 
 r.DefaultFeature.LocalExposure.ShadowContrastScale=0.8
+r.AntiAliasingMethod=2
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
@@ -156,3 +157,4 @@ ManualIPAddress=
 
 [CoreRedirects]
 +FunctionRedirects=(OldName="/Script/BG3Cpp.MouseControlledPlayer.OnForward",NewName="/Script/BG3Cpp.MouseControlledPlayer.ForwardMove")
+
