20250425 카메라 이동 추가 / PlayerUI에 현재 선택한 캐릭터 체력 표시

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -170,4 +170,5 @@ ManualIPAddress=
 [CoreRedirects]
 +FunctionRedirects=(OldName="/Script/BG3Cpp.MouseControlledPlayer.OnForward",NewName="/Script/BG3Cpp.MouseControlledPlayer.ForwardMove")
 +EnumRedirects=(OldName="/Script/BG3Cpp.EMouseState",NewName="/Script/BG3Cpp.EGameMouseState")
++PropertyRedirects=(OldName="/Script/BG3Cpp.CharacterStatus.fileName",NewName="/Script/BG3Cpp.CharacterStatus.FileName")
 
