20250426 카메라 움직임 수정(위아래 -> 카메라 회전) / 선택한 오브젝트가 플레이어블 캐릭터일경우 포커스,  마우스 휠 움직일시, 확대 축소

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -171,4 +171,7 @@ ManualIPAddress=
 +FunctionRedirects=(OldName="/Script/BG3Cpp.MouseControlledPlayer.OnForward",NewName="/Script/BG3Cpp.MouseControlledPlayer.ForwardMove")
 +EnumRedirects=(OldName="/Script/BG3Cpp.EMouseState",NewName="/Script/BG3Cpp.EGameMouseState")
 +PropertyRedirects=(OldName="/Script/BG3Cpp.CharacterStatus.fileName",NewName="/Script/BG3Cpp.CharacterStatus.FileName")
++PropertyRedirects=(OldName="/Script/BG3Cpp.MouseControlledPlayer.MinZ",NewName="/Script/BG3Cpp.MouseControlledPlayer.MinLength")
++PropertyRedirects=(OldName="/Script/BG3Cpp.MouseControlledPlayer.MaxZ",NewName="/Script/BG3Cpp.MouseControlledPlayer.MaxLength")
++PropertyRedirects=(OldName="/Script/BG3Cpp.MouseControlledPlayer.TargetLenght",NewName="/Script/BG3Cpp.MouseControlledPlayer.TargetLength")
 
