20250427 행동 매니저 추가 / 행동 클래스 추가 / 액션 테이블 추가

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -174,4 +174,5 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/BG3Cpp.MouseControlledPlayer.MinZ",NewName="/Script/BG3Cpp.MouseControlledPlayer.MinLength")
 +PropertyRedirects=(OldName="/Script/BG3Cpp.MouseControlledPlayer.MaxZ",NewName="/Script/BG3Cpp.MouseControlledPlayer.MaxLength")
 +PropertyRedirects=(OldName="/Script/BG3Cpp.MouseControlledPlayer.TargetLenght",NewName="/Script/BG3Cpp.MouseControlledPlayer.TargetLength")
++PropertyRedirects=(OldName="/Script/BG3Cpp.MoveCharacterBase.DisplayStatus",NewName="/Script/BG3Cpp.MoveCharacterBase.DetailStatus")
 
