20250430 이동거리 게이지 추가 / 전투 시작시 전투에 참여한 캐릭터 모음 표시하도록 적용 (아직 턴 순서 정하는것은 안했음)

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -175,4 +175,7 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/BG3Cpp.MouseControlledPlayer.MaxZ",NewName="/Script/BG3Cpp.MouseControlledPlayer.MaxLength")
 +PropertyRedirects=(OldName="/Script/BG3Cpp.MouseControlledPlayer.TargetLenght",NewName="/Script/BG3Cpp.MouseControlledPlayer.TargetLength")
 +PropertyRedirects=(OldName="/Script/BG3Cpp.MoveCharacterBase.DisplayStatus",NewName="/Script/BG3Cpp.MoveCharacterBase.DetailStatus")
++PropertyRedirects=(OldName="/Script/BG3Cpp.PlayerUI.HpMat",NewName="/Script/BG3Cpp.PlayerUI.HpMatDynamic")
++PropertyRedirects=(OldName="/Script/BG3Cpp.PlayerUI.moveMat",NewName="/Script/BG3Cpp.PlayerUI.MoveMatDynamic")
++PropertyRedirects=(OldName="/Script/BG3Cpp.PlayerUI.moveMaterial",NewName="/Script/BG3Cpp.PlayerUI.MoveMaterial")
 
