20250505 이동방식 수정 / 행동을 할 경우 행동 max거리까지 걸어가도록 적용 / max거리까지 이동후 행동 / 행동이후 ui 표시 갱신

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -179,4 +179,5 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/BG3Cpp.PlayerUI.HpMat",NewName="/Script/BG3Cpp.PlayerUI.HpMatDynamic")
 +PropertyRedirects=(OldName="/Script/BG3Cpp.PlayerUI.moveMat",NewName="/Script/BG3Cpp.PlayerUI.MoveMatDynamic")
 +PropertyRedirects=(OldName="/Script/BG3Cpp.PlayerUI.moveMaterial",NewName="/Script/BG3Cpp.PlayerUI.MoveMaterial")
++PropertyRedirects=(OldName="/Script/BG3Cpp.MoveCharacterBase.controller",NewName="/Script/BG3Cpp.MoveCharacterBase.charController")
 
