--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -26,6 +26,7 @@ r.DefaultFeature.LocalExposure.HighlightContrastScale=0.8
 r.DefaultFeature.LocalExposure.ShadowContrastScale=0.8
 r.AntiAliasingMethod=4
 r.DefaultFeature.AutoExposure=False
+r.DefaultFeature.MotionBlur=False
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
@@ -180,4 +181,5 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/BG3Cpp.PlayerUI.moveMat",NewName="/Script/BG3Cpp.PlayerUI.MoveMatDynamic")
 +PropertyRedirects=(OldName="/Script/BG3Cpp.PlayerUI.moveMaterial",NewName="/Script/BG3Cpp.PlayerUI.MoveMaterial")
 +PropertyRedirects=(OldName="/Script/BG3Cpp.MoveCharacterBase.controller",NewName="/Script/BG3Cpp.MoveCharacterBase.charController")
++ClassRedirects=(OldName="/Script/BG3Cpp.ParabolaSline",NewName="/Script/BG3Cpp.ParabolaSpline")
 
