원거리 공격 추가 / 원거리를 근접에서 때릴 경우 - 고지대 / 저지대 공격할 경우 점수표시 / 판정 추가

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -183,3 +183,6 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/BG3Cpp.MoveCharacterBase.controller",NewName="/Script/BG3Cpp.MoveCharacterBase.charController")
 +ClassRedirects=(OldName="/Script/BG3Cpp.ParabolaSline",NewName="/Script/BG3Cpp.ParabolaSpline")
 
+[/Script/NavigationSystem.RecastNavMesh]
+RuntimeGeneration=Dynamic
+
