다수 타겟팅 커서 추가 / 주문슬롯 동적 생성 / 주문슬롯 감소 표시

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -182,6 +182,7 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/BG3Cpp.PlayerUI.moveMaterial",NewName="/Script/BG3Cpp.PlayerUI.MoveMaterial")
 +PropertyRedirects=(OldName="/Script/BG3Cpp.MoveCharacterBase.controller",NewName="/Script/BG3Cpp.MoveCharacterBase.charController")
 +ClassRedirects=(OldName="/Script/BG3Cpp.ParabolaSline",NewName="/Script/BG3Cpp.ParabolaSpline")
++PropertyRedirects=(OldName="/Script/BG3Cpp.ProjectileBase.FireballInstigator",NewName="/Script/BG3Cpp.ProjectileBase.AttackInstigator")
 
 [/Script/NavigationSystem.RecastNavMesh]
 RuntimeGeneration=Dynamic
